--- a/index.html
+++ b/index.html
@@ -18,20 +18,13 @@
 
     <main>
       <h2 class="loading"></h2>
-      <div class="card-result">
-        <!-- <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div> -->
-      </div>
+      <div class="card-result"></div>
       
       <div class="button-actions">
-        <button class="prev">prev</button>
+        <button class="prev" id="prev">prev</button>
+          <h1 class="numberPage"></h1>
+          <h1>of</h1>
+          <h1 class="numberOfPage"></h1>
         <button class="next">next</button>
       </div>
     </main>
