perbaikan di button next dan prev

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="button-actions">
         <button class="prev" id="prev">prev</button>
           <h1 class="numberPage"></h1>
-          <h1>of</h1>
+          <h1 class="of">of</h1>
           <h1 class="numberOfPage"></h1>
         <button class="next">next</button>
       </div>
