menambah card video di detail page

--- a/detail.html
+++ b/detail.html
@@ -10,10 +10,10 @@
 <body>
   <div class="container">
     <i class="fa-solid fa-arrow-left-long back" style="font-size: 25px;"></i>
-    <h1 class="heading">detail page</h1>
-
     <div class="card-detail">
       <h1 class="h1-detail"></h1>
+      <iframe  height="315" src="" frameborder="0" allowfullscreen class="video"></iframe>
+      <p class="des"></p>
     </div>
   </div>
 
