clear console di project

--- a/detail.html
+++ b/detail.html
@@ -12,11 +12,10 @@
     <i class="fa-solid fa-arrow-left-long back" style="font-size: 25px;"></i>
     <div class="card-detail">
       <h1 class="h1-detail"></h1>
-      <iframe  height="315" src="" frameborder="0" allowfullscreen class="video"></iframe>
+      <iframe id="myFrame" height="350" frameborder="0" allowfullscreen class="frame" ></iframe>
       <p class="des"></p>
     </div>
   </div>
-
   <script src="detail.js"></script>
 </body>
 </html>
